tests/negative/ambiguous_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

foo:
  return "a"

bar := 0

class AmbiguousC:
